fix the way the weather app image displaying on smaller screens

--- a/staticfiles/portfolioWebsite/style.css
+++ b/staticfiles/portfolioWebsite/style.css
@@ -148,6 +148,11 @@ h5 {
     padding-right: 0; /* Adjust padding */
   }
 
+  .row-3 {
+    display: block;
+    gap:20px;
+}
+
 }
 
 
